Refactor authentication backend to integrate Lumen framework, update MongoDB configuration, and restructure project files for improved organization. Removed legacy database configuration and controllers, and enhanced JWT implementation documentation.

--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,8 @@
     "autoload": {
         "psr-4": {
             "Finger\\": "src/",
-            "Finger\\Apps\\Auth\\Backend\\": "apps/auth/backend/src/",
-            "Finger\\Apps\\Backoffice\\Backend\\": "apps/backoffice/backend/src/"
+            "Finger\\Apps\\Backoffice\\Backend\\": "apps/backoffice/backend/src/",
+            "Finger\\Apps\\Auth\\Backend\\": "apps/auth/backend/app/"
         }
     },
     "autoload-dev": {
