--- a/env.example
+++ b/env.example
@@ -1,5 +1,10 @@
 # Database
+DB_CONNECTION=mongodb
 DB_PASSWORD=your_secure_password_here
+
+# MongoDB Configuration
+MONGODB_URI=mongodb://admin:secret@mongo:27017
+MONGODB_DATABASE=finger_auth
 
 # JWT
 JWT_SECRET=your_jwt_secret_here
