--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,12 @@
         "laravel/lumen-framework": "^11.0",
         "mongodb/mongodb": "^2.1.1",
         "ramsey/uuid": "^4.7",
+        "swagger-api/swagger-ui": "^5.0",
         "symfony/http-foundation": "^7.0",
         "symfony/messenger": "^7.0",
         "symfony/routing": "^7.0",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "zircote/swagger-php": "^4.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.24",
